Remove absolet Collections methods
Signed-off-by: Andrey Pleskach <ples@aiven.io>