@@ -12,20 +12,18 @@ import org.opensearch.common.settings.SecureSetting;
 import org.opensearch.common.settings.Setting;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.common.settings.SettingsException;
-import org.opensearch.common.util.set.Sets;
 import org.opensearch.repository.encrypted.security.RsaKeysReader;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.security.KeyPair;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 
-class EncryptedRepositorySettings {
+public class EncryptedRepositorySettings {
 
 	private static final Logger LOGGER = LogManager.getLogger(EncryptedRepositorySettings.class);
 
@@ -39,7 +37,7 @@ class EncryptedRepositorySettings {
 
 	public static final String S3_PREFIX = PREFIX + "s3.";
 
-	public static final Set<String> SUPPORTED_STORAGE_TYPES = Sets.newHashSet("fs", "azure", "gcs", "s3");
+	public static final List<String> SUPPORTED_STORAGE_TYPES = List.of("azure", "fs", "gcs", "s3");
 
 	public static final Setting.AffixSetting<InputStream> AZURE_PRIVATE_KEY = Setting.affixKeySetting(AZURE_PREFIX,
 			"private_key", key -> SecureSetting.secureFile(key, null));
@@ -68,7 +66,7 @@ class EncryptedRepositorySettings {
 	public static final List<Setting<?>> REPOSITORY_SETTINGS = List.of(AZURE_PUBLIC_KEY, AZURE_PRIVATE_KEY,
 			FS_PUBLIC_KEY, FS_PRIVATE_KEY, GCS_PUBLIC_KEY, GCS_PRIVATE_KEY, S3_PUBLIC_KEY, S3_PRIVATE_KEY);
 
-	private static final Map<String, Tuple<Setting.AffixSetting<InputStream>, Setting.AffixSetting<InputStream>>> PREFIXES = new HashMap<String, Tuple<Setting.AffixSetting<InputStream>, Setting.AffixSetting<InputStream>>>() {
+	private static final Map<String, Tuple<Setting.AffixSetting<InputStream>, Setting.AffixSetting<InputStream>>> PREFIXES = new HashMap<>() {
 		{
 			put(AZURE_PREFIX, Tuple.tuple(AZURE_PRIVATE_KEY, AZURE_PUBLIC_KEY));
 			put(FS_PREFIX, Tuple.tuple(FS_PRIVATE_KEY, FS_PUBLIC_KEY));
@@ -103,7 +101,7 @@ class EncryptedRepositorySettings {
 				repoSettings.put(repoSettingsKey, createKeyPair(client, prefix.getValue(), settings));
 			}
 		}
-		return new EncryptedRepositorySettings(Collections.unmodifiableMap(repoSettings));
+		return new EncryptedRepositorySettings(Map.copyOf(repoSettings));
 	}
 
 	private static KeyPair createKeyPair(final String prefix,
